Fix input text align

--- a/app/public/styles/_game-start.scss
+++ b/app/public/styles/_game-start.scss
@@ -36,6 +36,7 @@
       }
       input {
         background-color: $font-color;
+        text-align: left;
         padding: 0.1em 0.5em;
       }
     }
